@@ -17,6 +17,7 @@ examples/button_tags.pl
 examples/form.pl
 examples/form_default.pl
 examples/input_text.pl
+examples/option.pl
 examples/textarea.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
